<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.webpt</groupId>
    <artifactId>webpt-cucumber-starter</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>cucumber-base</name>
    <url>http://maven.apache.org</url>
    <repositories>
        <repository>
            <id>repo-liferay</id>
            <name>oss-liferay</name>
            <url>https://repository.liferay.com/nexus/content/groups/public</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>oss-sonatype</id>
            <name>oss-sonatype</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
        <!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId>
            <version>3.8.1</version> <scope>test</scope> </dependency> -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>com.opera</groupId>
            <artifactId>operadriver</artifactId>
            <version>0.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>commons-jxpath</groupId>
            <artifactId>commons-jxpath</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.8.3</version>
        </dependency>
        <dependency>
            <groupId>commons-dbutils</groupId>
            <artifactId>commons-dbutils</artifactId>
            <version>1.5</version>
        </dependency>
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.187</version>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom2</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-core</artifactId>
            <version>${jbehave.version}</version>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java8</artifactId>
            <version>1.2.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>3.9.0</version>
        </dependency>
        <dependency>
            <groupId>com.liferay</groupId>
            <artifactId>net.jsourcerer.webdriver.JSErrorCollector</artifactId>
            <version>0.6</version>
        </dependency>
        <dependency>

            <groupId>org.sikuli</groupId>
            <artifactId>sikuli-api</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>phantomjsdriver</artifactId>
            <version>1.4.3</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
        </dependency>
        <!-- <dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId>
            <version>1.2.3</version> <scope>test</scope> </dependency> -->
        <!-- <dependency> <groupId>net.masterthought</groupId> <artifactId>cucumber-reporting</artifactId>
            <version>3.9.0</version> </dependency> -->

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.mkolisnyk</groupId>
            <artifactId>cucumber-runner</artifactId>
            <version>1.0.8</version>
        </dependency>
        <!-- <dependency> <groupId>net.masterthought.jenkins</groupId> <artifactId>cucumber-reports</artifactId>
            <version>0.0.21</version> </dependency> -->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>maven-cucumber-reporting</artifactId>
            <version>3.16.0</version>
        </dependency>
        <!-- <dependency> <groupId>org.jenkins-ci.plugins</groupId> <artifactId>git</artifactId>
            <version>2.5.0</version> </dependency> -->
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar.scanner.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <fork>true</fork>
                    <meminitial>1024m</meminitial>
                    <maxmem>2048</maxmem>
                    <compilerArgs>
                        <arg>-Xmx2048m -XX:MaxPermSize=2048</arg>
                    </compilerArgs>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <properties>
                        <rerunFailingTestsCount>2</rerunFailingTestsCount>
                    </properties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <!--<includes> <exclude>**/cucumber-testng-runner.vm</exclude> </includes> -->
                    <forkCount>1</forkCount>
                    <!-- <argLine>-Xmx2048m -XX:MaxPermSize=128</argLine> -->
                    <!-- Suite testng xml file to consider for test execution -->
                    <suiteXmlFiles>

                        <!-- <suiteXmlFile>src/test/resources/suite-regression-full.xml</suiteXmlFile> -->
                    </suiteXmlFiles>

                    <properties>
                        <rerunFailingTestsCount>2</rerunFailingTestsCount>
                    </properties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.4</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.wagon</groupId>
                        <artifactId>wagon-webdav-jackrabbit</artifactId>
                        <version>2.8</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <locales>en</locales>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>2.2.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <!-- Mandatory -->
                            <!-- comma separated list of package names to scan for glue code -->
                            <!--<glue>com.webpt.step.definition.bing</glue> -->
                            <glue>com.webpt.step.definition.google</glue>
                            <!-- These are optional, with the default values <name>json</name>
                                <extension>json</extension> -->
                            <!-- Where to output the generated tests -->
                            <outputDirectory>${project.build.directory}/cucumber-parallel/json</outputDirectory>
                            <!-- The directory, which must be in the root of the runtime classpath,
                                containing your feature files. -->
                            <featuresDirectory>src/test/resources/features/</featuresDirectory>
                            <!-- Directory where the cucumber report files shall be written -->
                            <cucumberOutputDir>target/output/json</cucumberOutputDir>
                            <!-- comma separated list of output formats -->


                            <format>json</format>
                            <!-- CucumberOptions.strict property -->
                            <strict>true</strict>
                            <!-- CucumberOptions.monochrome property -->
                            <monochrome>true</monochrome>
                            <!-- The tags to run, maps to CucumberOptions.tags property -->
                            <tags>${tags}</tags>

                            <!-- If set to true, only feature files containing the required tags
                                shall be generated. -->
                            <filterFeaturesByTags>true</filterFeaturesByTags>
                            <!-- Generate TestNG runners instead of JUnit ones. -->
                            <useTestNG>true</useTestNG>
                            <!-- The naming scheme to use for the generated test classes. One
                                of 'simple' or 'feature-title' -->
                            <namingScheme>simple</namingScheme>
                            <!-- The class naming pattern to use. Only required/used if naming
                                scheme is 'pattern'. -->
                            <namingPattern>Parallel{c}IT</namingPattern>
                            <!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per
                                scenario. FEATURE generates a runner per feature. -->
                            <parallelScheme>FEATURE</parallelScheme>
                            <!-- Specify a custom template for the generated sources (this is
                                a path relative to the project base directory) -->
                            <customVmTemplate>/src/test/resources/cucumber-testng-runner.vm</customVmTemplate>

                            <!-- Specify a custom package name for generated sources. Default
                                is no package. -->
                            <packageName>webpt.tests</packageName>

                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Fail safe plugin handles execution of the cucumber tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${failsafe.version}</version>
                <configuration>
                    <includes>
                        <include>Parallel*.java</include>

                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                    <forkCount>${threads}</forkCount>
                    <runOrder>alphabetical</runOrder>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>3.11.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-testNG-starter</projectName>
                            <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
                            <cucumberOutput>${project.build.directory}/output/json/1.json</cucumberOutput>

                            <parallelTesting>true</parallelTesting>

                            <checkBuildResult>true</checkBuildResult>
                            <skippedFails>false</skippedFails>
                            <enableFlashCharts>false</enableFlashCharts>
                            <buildNumber>1</buildNumber>

                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <message>Creating site for ${project.version}</message>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>site</phase>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
    <distributionManagement>
        <!-- mvn deploy -->

        <repository>
            <id>com.wptdev.nexus.releases</id>
            <name>WebPT Releases</name>
            <url>https://nexus.wptdev.com/nexus/content/repositories/releases</url>
        </repository>

        <snapshotRepository>
            <id>com.wptdev.nexus.snapshots</id>
            <name>WebPT Snapshots</name>
            <url>https://nexus.wptdev.com/nexus/content/repositories/snapshots</url>

        </snapshotRepository>

    </distributionManagement>
    <!-- <repository> <id>nexus</id> <name>Releases</name> <url>http://localhost:9091/repository/maven-releases</url>
        </repository> <snapshotRepository> <id>nexus</id> <name>Snapshot</name> <url>http://localhost:9091/repository/maven-snapshots</url>
        </snapshotRepository> <site> <id>nexus</id> <name>Nexus Sites</name> <url>dav:http://localhost:9091/nexus/content/sites/site/</url>
        </site> -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testng.version>6.14.2</testng.version>
        <slf4j.version>1.7.5</slf4j.version>
        <java.version>8</java.version>
        <selenium.version>3.11.0</selenium.version>
        <appium.version>2.0.0</appium.version>
        <phantomjsdriver.version>1.2.0</phantomjsdriver.version>
        <rest.assured.version>2.4.1</rest.assured.version>
        <jbehave.version>3.9.5</jbehave.version>
        <assertj.version>3.6.2</assertj.version>
        <sauce.rest.version>1.0.35</sauce.rest.version>
        <poi.version>3.16</poi.version>
        <surefire.version>2.20.1</surefire.version>
        <failsafe.version>2.20.1</failsafe.version>
        <threads>2</threads>
        <!-- sonar dependencies -->
        <sonar.scanner.version>3.2</sonar.scanner.version>
        <!-- <sonar.host.url>http://bluedrop.mynetgear.com:9997/</sonar.host.url> -->
        <mongodb.version>3.4.2</mongodb.version>
    </properties>

</project>
